# -End-to-End-ML-Project-Customer-Churn-Predition

./: .env.example  .gitignore  Customer_Churn_Prediction_Dashboard.pbix  Dockerfile  README.md  data_validator.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py  tree.txt
.github/workflows/: ci.yml
api/: config.py  main.py  schemas.py
config/: model_config.yaml
configs/: model_config.yaml
dashboard/powerbi/: powerbi_connector.py
data/powerbi/: contract_analysis.csv  internet_analysis.csv  monthly_trends.csv  predictions_powerbi.csv  summary_metrics.csv  tenure_analysis.csv
data/predictions/: predictions.csv
data/processed/: churn_engineered.csv
docs/: business_recommendations.md  model_insights.json
docs/images/: evaluation_report.md  explainability_report.md
mlruns/503910214298503935/: meta.yaml
mlruns/503910214298503935/00d021c56b014ee782e6c279f3df3f54/: meta.yaml
models/: best_model.pkl  best_tuned_model.pkl  model_metadata.json  scaler.pkl  training_columns.pkl
models/artifacts/: feature_names.pkl  label_encoders.pkl  scaler.pkl
notebooks/: 01_EDA.ipynb  02_Feature_Engineering.ipynb  03_Model_Experiments.ipynb  04_Model_Interpretation.ipynb  05_Business_Insights.ipynb
scripts/: deploy_colab.py  evaluate_model.py  generate_predictions.py  hyperparameter_tuning.py  load_data_for_powerbi.py  train_pipeline.py
src/: data_preprocessing.py  explainability.py  feature_engineering.py  model_evaluation.py  model_training.py  utils.py
tests/: conftest.py  test_api.py
(+25 files in other folders)
