[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction"
version = "1.0.0"
description = "Customer Churn Prediction System"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.2",
    "pandas>=2.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "flake8>=6.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --disable-warnings"
